--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,7 @@
 name: Release
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -30,22 +31,42 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
+        name:
+          # - git-remote-gosh-darwin-arm64
+          # - git-remote-gosh-darwin-amd64
+          # - git-remote-gosh-linux-arm64
+          - git-remote-gosh-linux-amd64
+        bin:
+          - git-remote-gosh
+          - git-remote-gosh_v1_0_0
+          - git-remote-gosh_v2_0_0
         include:
-          - os: macos-latest
-            target: aarch64-apple-darwin
-            name: git-remote-gosh-darwin-arm64
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            name: git-remote-gosh-darwin-amd64
-          - os: ubuntu-latest
+          ## bin
+          - bin: git-remote-gosh
+            dir: gosh-dispatcher
+          - bin: git-remote-gosh_v1_0_0
+            dir: v1_x/git-remote-gosh
+            copy_abi: true
+          - bin: git-remote-gosh_v2_0_0
+            dir: v2_x/git-remote-gosh
+            copy_abi: true
+
+          ## name
+          # - name: git-remote-gosh-darwin-arm64
+          #   os: macos-latest
+          #   target: aarch64-apple-darwin
+          # - name: git-remote-gosh-darwin-amd64
+          #   os: macos-latest
+          #   target: x86_64-apple-darwin
+          - name: git-remote-gosh-linux-arm64
+            os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            name: git-remote-gosh-linux-arm64
-          - os: ubuntu-latest
+          - name: git-remote-gosh-linux-amd64
+            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            name: git-remote-gosh-linux-amd64
-          # - os: windows-latest
+          # - name: git-remote-gosh-windows-amd64
+          #   os: windows-latest
           #   target: x86_64-pc-windows-msvc
-          #   name: git-remote-gosh-windows-amd64
 
     steps:
       - name: Checkout repo
@@ -60,10 +81,10 @@ jobs:
         with:
           path: ~/.cargo/git
           key: "${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}"
-      # - uses: actions/cache@v1
-      #   with:
-      #     path: ${{ github.workspace }}/target
-      #     key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions/cache@v1
+        with:
+          path: ${{ matrix.dir }}/target
+          key: ${{ matrix.target }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
       - uses: actions-rs/toolchain@v1
         with:
@@ -72,27 +93,78 @@ jobs:
           target: ${{ matrix.target }}
           override: true
 
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v2
-
       - name: Add cross compile Linux tools
         if: ${{ matrix.target == 'aarch64-unknown-linux-gnu' }}
         shell: bash
         run: |
-          sudo apt update -y
-          sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
+          apt update -y
+          apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
 
-      - name: Add cross compile Win tools
-        if: ${{ matrix.os == 'windows-latest' }}
-        shell: bash
-        run: |
-          choco install openssl
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
 
-      - name: Build dispatcher
-        shell: bash
+      - name: Copy ABI
+        if: ${{ matrix.copy_abi }}
+        working-directory: ${{ matrix.dir }}
+        run: make copy_abi
+
+      - name: Build Binary ${{ matrix.name }}
+        working-directory: ${{ matrix.dir }}
         run: |
-          mkdir -p '${{ matrix.name }}'
+          cargo build --release --target=${{ matrix.target }}
+
+      - name: Artifact ${{ matrix.name }}
+        working-directory: ${{ matrix.dir }}
+        run: |
+          cargo build --release --target=${{ matrix.target }}
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: ${{ matrix.dir}}/target/${{ matrix.target }}/release/${{ matrix.name }}
+          name: ${{ matrix.name }}--${{ matrix.bin }}
+
+  release:
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        name:
+          # - git-remote-gosh-darwin-arm64
+          # - git-remote-gosh-darwin-amd64
+          # - git-remote-gosh-linux-arm64
+          - git-remote-gosh-linux-amd64
+
+    steps:
+      - name: Make dir
+        run: |
+          mkdir -p ${{ matrix.name }}
+            - git-remote-gosh
+            - git-remote-gosh_v1_0_0
+            - git-remote-gosh_v2_0_0
+
+      - name: Download git-remote-gosh
+        uses: actions/download-artifact@v3
+        with:
+          path: ${{ matrix.name }}/git-remote-gosh
+          name: ${{ matrix.name }}--git-remote-gosh
+
+      - name: Download git-remote-gosh_v1_0_0
+        uses: actions/download-artifact@v3
+        with:
+          path: ${{ matrix.name }}/git-remote-gosh_v1_0_0
+          name: ${{ matrix.name }}--git-remote-gosh_v1_0_0
+
+      - name: Download git-remote-gosh_v2_0_0
+        uses: actions/download-artifact@v3
+        with:
+          path: ${{ matrix.name }}/git-remote-gosh_v2_0_0
+          name: ${{ matrix.name }}--git-remote-gosh_v2_0_0
+
+      - name: Make archive
+        run: |
+          chmod +x ${{ matrix.name }}/*
           tee <<EOF '${{ matrix.name }}/dispatcher.ini'
           git-remote-gosh_v1_0_0
           git-remote-gosh_v2_0_0
@@ -104,44 +176,80 @@ jobs:
           git-remote-gosh_v6_1_0
           EOF
 
-          cd gosh-dispatcher
-          cargo build --release --target=${{ matrix.target }}
-          mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
-          rm -rf target
+          tar -czvf ${{ matrix.name }}.tar.gz -C ${{ matrix.name }} .
 
-      - name: Build 6.1.0
-        shell: bash
-        run: |
-          cd v6_x/v6.1.0/git-remote-gosh
-          make copy_abi
-          cargo build --release --target=${{ matrix.target }}
-          mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
-          rm -rf target
-
-      - uses: actions/upload-artifact@v3
+      - name: Publish
+        uses: softprops/action-gh-release@v1
         with:
-          name: git-remote-gosh-${{ matrix.name }}
-          path: ${{ matrix.name }}
+          prerelease: true
+          files: |
+            ${{ matrix.name }}.tar.gz
+          tag_name: rc-${{ github.ref_name }}-${{ github.run_number }}
 
-      # - name: Build Archive *nix
-      #   shell: bash
-      #   if: ${{ runner.os != 'Windows'}}
-      #   run: |
-      #     ls -lA ${{ matrix.name }}
-      #     tar -czvf '${{ matrix.name }}.tar.gz' -C '${{ matrix.name }}' .
-
-      # - name: Build Archive Windows
-      #   shell: bash
-      #   if: ${{ runner.os == 'Windows'}}
-      #   run: |
-      #     ls -lA ${{ matrix.name }}
-      #     tar -czvf '${{ matrix.name }}.tar.gz' -C '${{ matrix.name }}' .
-
-      # - name: Publish
-      #   uses: softprops/action-gh-release@v1
+      # - uses: actions/download-artifact@v3
       #   with:
-      #     prerelease: true
-      #     files: |
-      #       ${{ matrix.name }}.tar.gz
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     path: target/${{ matrix.target }}/release/rust-openssl-windows
+      #     name: ${{ matrix.name }}
+
+      # # - name: Add cross compile Win tools
+      # #   if: ${{ matrix.os == 'windows-latest' }}
+      # #   shell: bash
+      # #   run: |
+      # #     choco install openssl
+
+      # - name: Build dispatcher
+      #   shell: bash
+      #   run: |
+      #     mkdir -p '${{ matrix.name }}'
+      #     tee <<EOF '${{ matrix.name }}/dispatcher.ini'
+      #     git-remote-gosh_v1_0_0
+      #     git-remote-gosh_v2_0_0
+      #     git-remote-gosh_v3_0_0
+      #     git-remote-gosh_v4_0_0
+      #     git-remote-gosh_v5_0_0
+      #     git-remote-gosh_v5_1_0
+      #     git-remote-gosh_v6_0_0
+      #     git-remote-gosh_v6_1_0
+      #     EOF
+
+      #     cd gosh-dispatcher
+      #     cargo build --release --target=${{ matrix.target }}
+      #     mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
+      #     rm -rf target
+
+      # - name: Build 6.1.0
+      #   shell: bash
+      #   run: |
+      #     cd v6_x/v6.1.0/git-remote-gosh
+      #     make copy_abi
+      #     cargo build --release --target=${{ matrix.target }}
+      #     mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
+      #     rm -rf target
+
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #     name: git-remote-gosh-${{ matrix.name }}
+      #     path: ${{ matrix.name }}
+
+      # # - name: Build Archive *nix
+      # #   shell: bash
+      # #   if: ${{ runner.os != 'Windows'}}
+      # #   run: |
+      # #     ls -lA ${{ matrix.name }}
+      # #     tar -czvf '${{ matrix.name }}.tar.gz' -C '${{ matrix.name }}' .
+
+      # # - name: Build Archive Windows
+      # #   shell: bash
+      # #   if: ${{ runner.os == 'Windows'}}
+      # #   run: |
+      # #     ls -lA ${{ matrix.name }}
+      # #     tar -czvf '${{ matrix.name }}.tar.gz' -C '${{ matrix.name }}' .
+
+      # # - name: Publish
+      # #   uses: softprops/action-gh-release@v1
+      # #   with:
+      # #     prerelease: true
+      # #     files: |
+      # #       ${{ matrix.name }}.tar.gz
+      # #   env:
+      # #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
