--- a/.github/workflows/release copy.yaml
+++ b/.github/workflows/release copy.yaml
@@ -39,22 +39,28 @@ jobs:
           - git-remote-gosh_v1_0_0
           - git-remote-gosh_v2_0_0
         include:
-          ## bin
-          - bin: git-remote-gosh
-            dir: gosh-dispatcher
-            name:
-          - bin: git-remote-gosh_v1_0_0
-            dir: v1_x/git-remote-gosh
-            copy_abi: true
-            name:
-          - bin: git-remote-gosh_v2_0_0
-            dir: v2_x/git-remote-gosh
-            copy_abi: true
-            name:
-          - bin: git-remote-gosh_v3_0_0
-            dir: v3_x/git-remote-gosh
-            copy_abi: true
-            name:
+          - name: git-remote-gosh-linux-arm64
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+          - name: git-remote-gosh-linux-amd64
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          # ## bin
+          # - bin: git-remote-gosh
+          #   dir: gosh-dispatcher
+          #   name:
+          # - bin: git-remote-gosh_v1_0_0
+          #   dir: v1_x/git-remote-gosh
+          #   copy_abi: true
+          #   name:
+          # - bin: git-remote-gosh_v2_0_0
+          #   dir: v2_x/git-remote-gosh
+          #   copy_abi: true
+          #   name:
+          # - bin: git-remote-gosh_v3_0_0
+          #   dir: v3_x/git-remote-gosh
+          #   copy_abi: true
+          #   name:
 
           ## name
           # - name: git-remote-gosh-darwin-arm64
@@ -63,12 +69,6 @@ jobs:
           # - name: git-remote-gosh-darwin-amd64
           #   os: macos-latest
           #   target: x86_64-apple-darwin
-          - name: git-remote-gosh-linux-arm64
-            os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-          - name: git-remote-gosh-linux-amd64
-            os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
           # - name: git-remote-gosh-windows-amd64
           #   os: windows-latest
           #   target: x86_64-pc-windows-msvc
