--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,7 +75,8 @@ jobs:
         uses: actions/checkout@v4
 
       # Cache
-      - name: Set up cargo cache key: ${{ runner.os }}-cargo-${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
+      - name: >
+          Set up cargo cache key: ${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
         uses: actions/cache@v3
         continue-on-error: false
         with:
@@ -85,8 +86,8 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             ${{ matrix.dir }}/target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
-          # key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          # key: ${{ runner.os }}-cargo-${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-cargo-
 
       - uses: actions-rs/toolchain@v1
