--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,20 +75,21 @@ jobs:
         uses: actions/checkout@v4
 
       # Cache
-      - name: >
-          Set up cargo cache key: ${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
+      - name: Set up cargo cache
         uses: actions/cache@v3
-        continue-on-error: false
         with:
           path: |
             ~/.cargo/bin/
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
-            ${{ matrix.dir }}/target/
-          # key: ${{ runner.os }}-cargo-${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
+          key: ${{ runner.os }}-cargo
+      - name: Set up target cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ matrix.dir }}/target/
+          key: ${{ runner.os }}-${{ matrix.bin }}-target-${{ hashFiles(format('{0}{1}', matrix.dir, '/Cargo.lock')) }}
+          restore-keys: ${{ runner.os }}-${{ matrix.bin }}-target-
 
       - uses: actions-rs/toolchain@v1
         with:
@@ -121,11 +122,13 @@ jobs:
       - name: Artifact ${{ matrix.name }}
         working-directory: ${{ matrix.dir }}
         run: |
-          cargo build --release --target=${{ matrix.target }}
+          # cargo build --release --target=${{ matrix.target }}
+          mkdir -p ${{ matrix.dir }}/target/${{ matrix.target }}/release/
+          touch ${{ matrix.dir }}/target/${{ matrix.target }}/release/${{ matrix.name }}
 
       - uses: actions/upload-artifact@v3
         with:
-          path: ${{ matrix.dir}}/target/${{ matrix.target }}/release/${{ matrix.name }}
+          path: ${{ matrix.dir }}/target/${{ matrix.target }}/release/${{ matrix.name }}
           name: ${{ matrix.name }}--${{ matrix.bin }}
 
   release:
